--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <!-- Using GSAP + ScrollTrigger for bidirectional, scroll-linked animations -->
   </head>
   <body>
     <div id="scroll-progress" aria-hidden="true"></div>
@@ -389,7 +389,8 @@
       </nav>
       <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+    <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
