--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <body>
     <div id="scroll-progress" aria-hidden="true"></div>
     <nav id="desktop-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Navindu Sirimanna</div>
       <div>
         <ul class="nav-links">
-          <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#about" class="nav-button">About</a></li>
+          <li><a href="#experience" class="nav-button">Experience</a></li>
+          <li><a href="#projects" class="nav-button">Projects</a></li>
+          <li><a href="#contact" class="nav-button">Contact</a></li>
         </ul>
       </div>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">John Doe</div>
+      <div class="logo">Navindu Sirimanna</div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -31,21 +31,21 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
-          <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+          <li><a href="#about" onclick="toggleMenu()" class="nav-button">About</a></li>
+          <li><a href="#experience" onclick="toggleMenu()" class="nav-button">Experience</a></li>
+          <li><a href="#projects" onclick="toggleMenu()" class="nav-button">Projects</a></li>
+          <li><a href="#contact" onclick="toggleMenu()" class="nav-button">Contact</a></li>
         </div>
       </div>
     </nav>
     <section id="profile" data-aos="fade-up" data-aos-once="true">
       <div class="section__pic-container" data-aos="fade-right" data-aos-once="true">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" data-speed="0.12" />
+        <img src="./assets/profile-pic.png" alt="Navindu Sirimanna profile picture" data-speed="0.12" />
       </div>
       <div class="section__text" data-aos="fade-left" data-aos-once="true">
         <p class="section__text__p1">Hello, I'm</p>
-        <h1 class="title">John Doe</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <h1 class="title">Navindu Sirimanna</h1>
+        <p class="section__text__p2">DevOps Engineer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -60,15 +60,15 @@
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
+            alt="Navindu Sirimanna LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/navindu-sirimanna-0b3898212/'"
           />
           <img
             src="./assets/github.png"
-            alt="My Github profile"
+            alt="NavinduThimodya GitHub profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/NavinduThimodya'"
           />
         </div>
       </div>
@@ -364,7 +364,15 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p><a href="mailto:navindusirimanna@gmail.com">navindusirimanna@gmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/phone-circle.png"
+            alt="Phone icon"
+            class="icon contact-icon"
+          />
+          <p><a href="tel:+94712068855">+94 71 206 8855</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -372,7 +380,15 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/navindu-sirimanna-0b3898212/">LinkedIn</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/github.png"
+            alt="GitHub icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://github.com/NavinduThimodya">GitHub</a></p>
         </div>
       </div>
     </section>
@@ -380,14 +396,14 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about" class="nav-button">About</a></li>
+            <li><a href="#experience" class="nav-button">Experience</a></li>
+            <li><a href="#projects" class="nav-button">Projects</a></li>
+            <li><a href="#contact" class="nav-button">Contact</a></li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025  Navindu Sirimanna.  All Rights Reserved.</p>
     </footer>
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
