--- a/index.html
+++ b/index.html
@@ -12,18 +12,15 @@
   <body>
     <div id="scroll-progress" aria-hidden="true"></div>
     <nav id="desktop-nav">
-      <div class="logo">Navindu Sirimanna</div>
-      <div>
-        <ul class="nav-links">
-          <li><a href="#about" class="nav-button">About</a></li>
-          <li><a href="#experience" class="nav-button">Experience</a></li>
-          <li><a href="#projects" class="nav-button">Projects</a></li>
-          <li><a href="#contact" class="nav-button">Contact</a></li>
-        </ul>
-      </div>
+      <ul class="nav-links">
+        <li><a href="#about" class="nav-button">About</a></li>
+        <li><a href="#experience" class="nav-button">Experience</a></li>
+        <li><a href="#projects" class="nav-button">Projects</a></li>
+        <li><a href="#contact" class="nav-button">Contact</a></li>
+      </ul>
     </nav>
     <nav id="hamburger-nav">
-      <div class="logo">Navindu Sirimanna</div>
+      <div class="logo"></div>
       <div class="hamburger-menu">
         <div class="hamburger-icon" onclick="toggleMenu()">
           <span></span>
@@ -393,16 +390,6 @@
       </div>
     </section>
     <footer>
-      <nav>
-        <div class="nav-links-container">
-          <ul class="nav-links">
-            <li><a href="#about" class="nav-button">About</a></li>
-            <li><a href="#experience" class="nav-button">Experience</a></li>
-            <li><a href="#projects" class="nav-button">Projects</a></li>
-            <li><a href="#contact" class="nav-button">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
       <p>Copyright &#169; 2025  Navindu Sirimanna.  All Rights Reserved.</p>
     </footer>
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
