--- a/index.html
+++ b/index.html
@@ -91,16 +91,39 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>6 months<br />Infrastructure Intern Engineer<br />MillenniumIT ESP</p>
             </div>
+          </div>
+          <hr style="margin: 1rem 0; border: 0; border-top: 1px solid var(--border);" />
+          <div class="about-containers">
             <div class="details-container" data-aos="fade-up" data-aos-once="true">
               <img
                 src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <h3>University Education</h3>
+              <p>B.Sc. Honours in Electronic and Telecommunications Engineering at the University of Moratuwa (2021–Present).<br />
+              GPA: <span style="color: var(--accent);"><b>3.88 / 4.00.</b></span><br />
+              Honours: Currently maintaining a First Class Honours.</p>
+            </div>
+            <div class="details-container" data-aos="fade-up" data-aos-once="true">
+                <img
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>GCE Advanced Level</h3>
+              <p><br />3 A Passes (Physical Science Stream)<br /><span style="color: var(--accent);"><b>Island Rank: 35</b></span><br />Z-Score: <span style="color: var(--accent);">2.7474</span></p>
+            </div>
+            <div class="details-container" data-aos="fade-up" data-aos-once="true">
+                <img
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Diploma</h3>
+              <p><br />Diploma in Human Resource Management<br />NYSCO Vocational Training Centre (2025)</p>
             </div>
           </div>
           <div class="text-container">
