--- a/index.html
+++ b/index.html
@@ -84,28 +84,26 @@
         </div>
         <div class="about-details-container" data-aos="fade-left" data-aos-once="true">
           <div class="about-containers">
-            <div class="details-container" data-aos="fade-up" data-aos-once="true">
+            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
               <img
                 src="./assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>6 months<br />Infrastructure Intern Engineer<br />MillenniumIT ESP</p>
+              <p><br /><b>Infrastructure Intern Engineer</b><br />MillenniumIT ESP</p>
             </div>
           </div>
           <hr style="margin: 1rem 0; border: 0; border-top: 1px solid var(--border);" />
           <div class="about-containers">
-            <div class="details-container" data-aos="fade-up" data-aos-once="true">
+            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1M0jEzFv5mTJ1HM-qR6zEkbHCgxBx9YbO/view?usp=share_link', '_blank')">
               <img
-                src="./assets/education.png"
+                src="./assets/BSC.png"
                 alt="Education icon"
                 class="icon"
               />
-              <h3>University Education</h3>
-              <p>B.Sc. Honours in Electronic and Telecommunications Engineering at the University of Moratuwa (2021–Present).<br />
-              GPA: <span style="color: var(--accent);"><b>3.88 / 4.00.</b></span><br />
-              Honours: Currently maintaining a First Class Honours.</p>
+              <h3>Higher Education</h3>
+              <p><br />B.Sc. Honours in Electronic and Telecommunications Engineering<br />University of Moratuwa<br /><span style="color: var(--accent);"><b>CGPA: 3.88 / 4.00</b></span><br />(2021–Present)</p>
             </div>
             <div class="details-container" data-aos="fade-up" data-aos-once="true">
                 <img
@@ -114,16 +112,16 @@
                 class="icon"
               />
               <h3>GCE Advanced Level</h3>
-              <p><br />3 A Passes (Physical Science Stream)<br /><span style="color: var(--accent);"><b>Island Rank: 35</b></span><br />Z-Score: <span style="color: var(--accent);">2.7474</span></p>
+              <p><br />3 A Passes (Physical Science Stream)<br /><span style="color: var(--accent);"><b>Island Rank: 35</b></span><br />Z-Score: 2.7474<br />(2020)</p>
             </div>
             <div class="details-container" data-aos="fade-up" data-aos-once="true">
                 <img
-                src="./assets/education.png"
+                src="./assets/Diploma.png"
                 alt="Education icon"
                 class="icon"
               />
               <h3>Diploma</h3>
-              <p><br />Diploma in Human Resource Management<br />NYSCO Vocational Training Centre (2025)</p>
+              <p><br />Diploma in <span style="color: var(--accent);">Human Resource Management</span><br />NYSCO Vocational Training Centre (2025)</p>
             </div>
           </div>
           <div class="text-container">
