--- a/index.html
+++ b/index.html
@@ -136,18 +136,15 @@
               <p><br />Diploma in <span style="color: var(--accent);">Human Resource Management</span><br />NYSCO Vocational Training Centre (2025)</p>
             </div>
           </div>
-          <div class="text-container">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
-            </p>
-          </div>
         </div>
       </div>
+      <div class="text-container">
+            <p>
+              I am a results-driven Electronic and Telecommunications Engineering undergraduate with a passion for building robust and efficient systems. My professional philosophy is built on absolute completion: I don’t just initiate tasks, I take full ownership to ensure every project is executed to perfection, from concept to deployment. Driven by unwavering self-confidence, I approach undefined challenges with the certainty that I can master any tool or technology required to find the solution.
+              <br /><br />
+              This technical agility is paired with a unique strength in collaboration reinforced by my background in Human Resource Management allowing me to bridge the gap between complex engineering problems and effective team dynamics. I am committed to delivering tangible value, bringing the reliability, integrity, and relentless drive for success that high-performing organizations demand.
+            </p>
+          </div>
       <img
         src="./assets/arrow.png"
         alt="Arrow icon"
