--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav id="desktop-nav">
       <ul class="nav-links">
         <li><a href="#about" class="nav-button">About</a></li>
-        <li><a href="#experience" class="nav-button">Experience</a></li>
+        <li><a href="#skills" class="nav-button">Skills</a></li>
         <li><a href="#projects" class="nav-button">Projects</a></li>
         <li><a href="#contact" class="nav-button">Contact</a></li>
       </ul>
@@ -29,7 +29,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()" class="nav-button">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()" class="nav-button">Experience</a></li>
+          <li><a href="#skills" onclick="toggleMenu()" class="nav-button">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()" class="nav-button">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()" class="nav-button">Contact</a></li>
         </div>
@@ -149,16 +149,16 @@
         src="./assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
-        onclick="location.href='./#experience'"
+        onclick="location.href='./#skills'"
       />
     </section>
-    <section id="experience" data-aos="fade-up" data-aos-once="true">
+    <section id="skills" data-aos="fade-up" data-aos-once="true">
       <p class="section__text__p1" data-aos="fade-right" data-aos-once="true">Explore My</p>
-      <h1 class="title" data-aos="fade-left" data-aos-once="true">Experience</h1>
-      <div class="experience-details-container">
+      <h1 class="title" data-aos="fade-left" data-aos-once="true">Skills</h1>
+      <div class="skills-details-container">
         <div class="about-containers">
           <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="skills-sub-title">Infrastructure & DevOps</h2>
             <div class="article-container">
               <article>
                 <img
@@ -167,29 +167,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
+                  <h3>Docker</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -200,36 +178,102 @@
                   class="icon"
                 />
                 <div>
-                  <h3>JavaScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>TypeScript</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
+                  <h3>Kubernetes</h3>
                   <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Bash/Shell</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Linux Administration</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>GitHub Actions</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Virtualization (VMware,KVM)</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Networking</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Storage</h3>
+                  <p>Beginner</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Backup</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Python</h3>
+                  <p>Advanced</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="skills-sub-title">Other</h2>
             <div class="article-container">
               <article>
                 <img
@@ -302,7 +346,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">Project One</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -329,7 +373,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Project Two</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -356,7 +400,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="skills-sub-title project-title">Project Three</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
