--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           />
         </div>
         <div class="about-details-container" data-aos="fade-left" data-aos-once="true">
-          <div class="about-containers">
-            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
+          <div class="about-containers-edu-gap">
+            <div class="details-container box-work" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
               <div class="link-icon-container">
                 <img src="./assets/link-icon.svg" alt="Link icon" class="link-icon" />
               </div>
@@ -98,8 +98,8 @@
             </div>
           </div>
           <hr style="margin: 1rem 0; border: 0; border-top: 1px solid var(--border);" />
-          <div class="about-containers">
-            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1M0jEzFv5mTJ1HM-qR6zEkbHCgxBx9YbO/view?usp=share_link', '_blank')">
+          <div class="about-containers-edu-gap">
+            <div class="details-container box-uni" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1M0jEzFv5mTJ1HM-qR6zEkbHCgxBx9YbO/view?usp=share_link', '_blank')">
               <div class="link-icon-container">
                 <img src="./assets/link-icon.svg" alt="Link icon" class="link-icon" />
               </div>
@@ -111,7 +111,7 @@
               <h3>Higher Education</h3>
               <p><br />B.Sc. Honours in Electronic and Telecommunications Engineering<br />University of Moratuwa<br /><span style="color: var(--accent);"><b>CGPA: 3.88 / 4.00</b></span><br />(2021–Present)</p>
             </div>
-            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1WLlIU_8No6wePeY5RmXl26m2lRafJZ8W/view?usp=share_link', '_blank')">
+            <div class="details-container box-al" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1WLlIU_8No6wePeY5RmXl26m2lRafJZ8W/view?usp=share_link', '_blank')">
                 <div class="link-icon-container">
                   <img src="./assets/link-icon.svg" alt="Link icon" class="link-icon" />
                 </div>
@@ -123,7 +123,7 @@
               <h3>GCE Advanced Level</h3>
               <p><br />3 A Passes (Physical Science Stream)<br /><span style="color: var(--accent);"><b>Island Rank: 35</b></span><br />Z-Score: 2.7474<br />(2020)</p>
             </div>
-            <div class="details-container" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
+            <div class="details-container box-diploma" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
               <div class="link-icon-container">
                 <img src="./assets/link-icon.svg" alt="Link icon" class="link-icon" />
               </div>
