--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Navindu_Sirimanna_CV.pdf')"
           >
             Download CV
           </button>
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p><br /><b>Infrastructure Intern Engineer</b><br />MillenniumIT ESP</p>
+              <p><br /><b>Infrastructure (Backup & DevOps) Intern Engineer</b><br />MillenniumIT ESP - 6 months</p>
             </div>
           </div>
           <hr style="margin: 1rem 0; border: 0; border-top: 1px solid var(--border);" />
@@ -204,7 +204,7 @@
                   <p>Advanced</p>
                 </div>
               </article>
-              <article>
+              <!-- <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -213,6 +213,17 @@
                 <div>
                   <h3>GitHub Actions</h3>
                   <p>Advanced</p>
+                </div>
+              </article> -->
+                            <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Networking</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -226,17 +237,7 @@
                   <p>Intermediate</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Networking</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -255,10 +256,26 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Backup</h3>
+                  <h3>Backup & Recovery</h3>
                   <p>Advanced</p>
                 </div>
               </article>
+              <!-- <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Python</h3>
+                  <p>Advanced</p>
+                </div>
+              </article> -->
+            </div>
+          </div>
+          <div class="details-container" data-aos="fade-up" data-aos-once="true">
+            <h2 class="skills-sub-title">Programming & Web</h2>
+            <div class="article-container">
               <article>
                 <img
                   src="./assets/checkmark.png"
@@ -270,12 +287,40 @@
                   <p>Advanced</p>
                 </div>
               </article>
-            </div>
-          </div>
-          <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="skills-sub-title">Other</h2>
-            <div class="article-container">
               <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Java</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Matlab</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <!-- <article>
                 <img
                   src="./assets/checkmark.png"
                   alt="Experience icon"
@@ -318,9 +363,88 @@
                   <h3>Git</h3>
                   <p>Intermediate</p>
                 </div>
+              </article> -->
+            </div>
+          </div>
+
+          <div class="details-container" data-aos="fade-up" data-aos-once="true">
+            <h2 class="skills-sub-title">Databases & Tools</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MySQL</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>MongoDB</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Git Actions</h3>
+                  <p>Advanced</p>
+                </div>
               </article>
             </div>
           </div>
+
+           <div class="details-container" data-aos="fade-up" data-aos-once="true">
+            <h2 class="skills-sub-title">Design & Specialized Tools</h2>
+            <div class="article-container">
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Unity</h3>
+                  <p>Advanced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Blender</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>C# (Game Dev)</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+            </div>
+          </div>
+
         </div>
       </div>
       <img
