--- a/index.html
+++ b/index.html
@@ -152,308 +152,58 @@
         onclick="location.href='./#skills'"
       />
     </section>
-    <section id="skills" data-aos="fade-up" data-aos-once="true">
-      <p class="section__text__p1" data-aos="fade-right" data-aos-once="true">Explore My</p>
-      <h1 class="title" data-aos="fade-left" data-aos-once="true">Skills</h1>
-      <div class="skills-details-container">
-        <div class="about-containers">
-          <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="skills-sub-title">Infrastructure & DevOps</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Docker</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Kubernetes</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Bash/Shell</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Linux Administration</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-              <!-- <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>GitHub Actions</h3>
-                  <p>Advanced</p>
-                </div>
-              </article> -->
-                            <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Networking</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Virtualization (VMware,KVM)</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Storage</h3>
-                  <p>Beginner</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Backup & Recovery</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-              <!-- <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Python</h3>
-                  <p>Advanced</p>
-                </div>
-              </article> -->
-            </div>
-          </div>
-          <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="skills-sub-title">Programming & Web</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Python</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Java</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>C</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Matlab</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-              <!-- <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article> -->
-            </div>
-          </div>
-
-          <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="skills-sub-title">Databases & Tools</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>MySQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>MongoDB</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git Actions</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-            </div>
-          </div>
-
-           <div class="details-container" data-aos="fade-up" data-aos-once="true">
-            <h2 class="skills-sub-title">Design & Specialized Tools</h2>
-            <div class="article-container">
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Unity</h3>
-                  <p>Advanced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Blender</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>C# (Game Dev)</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-            </div>
-          </div>
-
+    <section id="skills" data-aos="fade-up" data-aos-once="false">
+  <p class="section__text__p1" data-aos="fade-right" data-aos-once="false">Explore My</p>
+  <h1 class="title" data-aos="fade-left" data-aos-once="false">Skills</h1>
+  <div class="skills-details-container">
+    <div class="about-containers">
+      
+      <div class="details-container box-infra" data-aos="fade-up" data-aos-delay="100" data-aos-once="false">
+        <h2 class="skills-sub-title">Infrastructure & DevOps</h2>
+        <div class="article-container">
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Docker</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Kubernetes</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Bash/Shell</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Linux Admin</h3><p>Advanced</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Networking</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Virtualization</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Storage</h3><p>Beginner</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Backup</h3><p>Advanced</p></div></article>
         </div>
       </div>
-      <img
-        src="./assets/arrow.png"
-        alt="Arrow icon"
-        class="icon arrow"
-        onclick="location.href='./#projects'"
-      />
-    </section>
+
+      <div class="details-container box-prog" data-aos="fade-up" data-aos-delay="200" data-aos-once="false">
+        <h2 class="skills-sub-title">Programming & Web</h2>
+        <div class="article-container">
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Python</h3><p>Advanced</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Java</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>C</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Matlab</h3><p>Advanced</p></div></article>
+        </div>
+      </div>
+
+      <div class="details-container box-db" data-aos="fade-up" data-aos-delay="300" data-aos-once="false">
+        <h2 class="skills-sub-title">Databases & Tools</h2>
+        <div class="article-container">
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>MySQL</h3><p>Basic</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>MongoDB</h3><p>Basic</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Git Actions</h3><p>Advanced</p></div></article>
+        </div>
+      </div>
+
+      <div class="details-container box-design" data-aos="fade-up" data-aos-delay="400" data-aos-once="false">
+        <h2 class="skills-sub-title">Design & Specialized Tools</h2>
+        <div class="article-container">
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Unity</h3><p>Advanced</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Blender</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>C#</h3><p>Intermediate</p></div></article>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+</section>
     <section id="projects">
       <p class="section__text__p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
